--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,7 @@ define_sanity_output.txt
 # ezdb
 /db/
 /config/ezdb.txt
+
+# Ignore cached sound files.
+/sound/tts_cache/**/*
+/sound/tts_scrambled/**/*
