Fix mob_Hear runtimes (#60) Fix build error (#59) Fix TTS voicing empty custom say emotes (#50) Rework TTS options with sliders (#42) TTS fixes (#41)
* Fix TTS subsystem initialization status

* Fix TTS statistics message
TTS volume preferences (#36)

* Add TTS volume preferences

* Prevent mocked mobs from hearing TTS

* Skip TTS logic if TTS subsystem is disabled
Make humans without tts_seed fallback to Arthas (#38)
Silero TTS integration (#9)

* Update rust_g 1.0.2 -> 1.0.4-ss220

* Add TTS sound cache folder to .gitignore

* Port Silero TTS to the build

* Add TTS seed selection UI and saving

* making tts module

* added line

* Update rust_g.dm

* undefs

* small fix

* another fix

* another include fix

* Remove redundant var argument prefix

* Fix TypeScript issues

* Add TEMPORARY playsound_local override with wait support

* Fix overriden mob/living/Hear

* Fix TTS messages sanitization

* regex optimization

* Add languageless sounds case handling

* Add non-understandable messages TTS case handling

* Remove broken ffmpeg paths sanitization

* Fix messages queue

Fix observers not hearing TTS (#33)
Add TTS as separate ss220 config (#29)
TTS fixes (#30)

* Fix TTS broadcasting to unconsious mobs

* Silent scrambled whisper
TTS fixes (#21)

* Make pluses cut from chat messages instead of TTS input

* Half radio loudness

---------

Co-authored-by: Vallat <vox.crit2013@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,7 @@ define_sanity_output.txt
 
 # Running OpenDream locally
 tgstation.json
+
+# Ignore cached sound files.
+/sound/tts_cache/**/*
+/sound/tts_scrambled/**/*
