--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -2,17 +2,17 @@ name: CI Suite
 on:
   push:
     branches:
-    - master220
+    - nova
     - 'project/**'
     - 'gh-readonly-queue/master/**'
     - 'gh-readonly-queue/project/**'
   pull_request:
     branches:
-    - master220
+    - nova
     - 'project/**'
   merge_group:
     branches:
-    - master220
+    - nova
   workflow_call:
 
 jobs:
